--- a/stripe/package.json
+++ b/stripe/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "description": "Stripe payment integration demo",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@sendgrid/mail": "^8.1.5",
+    "@sendgrid/mail": "^7.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "mongoose": "^8.14.2",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "googleapis": "^92.0.0",
+    "mongoose": "^6.0.0",
     "nodemailer": "^7.0.3",
-    "stripe": "^14.25.0"
+    "stripe": "^8.174.0"
   }
 }
